feat: add the final implementation of the beneficiosPerYear enpoint
- Added the `beneficiosPerYear` endpoint to the `BeneficioController`.
- include benefits that meet the filter criteria
- formatted response to include the year and total benefits for each year.
- use collections to improve performance
- added also the total amount per year
- sort by year in descending order
