# routes/api.php
@@ -11,6 +11,8 @@ Route::get('/user', function (Request $request) {
 
 Route::get('/analisis-beneficios', [BeneficioController::class, 'analisis']);
 // Route::get('/analisis-beneficios', [BeneficioController::class, 'index']);
+Route::get('/processed-benefits', [BeneficioController::class, 'getBeneficiosPerYear']);
+
 
 Route::get('/debug-beneficios', function () {
     $beneficios = Http::get('https://run.mocky.io/v3/8f75c4b5-ad90-49bb-bc52-f1fc0b4aad02')->json();
